Stop buttons from overflowing to new line on skinny images

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -248,7 +248,7 @@ $grid-spacing: 10px;
 			}
 
 			.btn {
-				font-size: 12px;
+				font-size: 11.5px;
 			}
 		}
 	}
